Small bug in tabpanel navs, and now selected tab doesnt collapse

--- a/src/layout.less
+++ b/src/layout.less
@@ -96,6 +96,9 @@ body > footer {
                     .close {
                         flex: 0 0 auto;
                     }
+                    &.selected {
+                        flex: 0 0 auto;
+                    }
                 }
             }
             & > div {
